@@ -2369,6 +2369,9 @@ setInlineHandler("switch", function(e, cb, cntxt) {
         expr <- e[[2]]
         cases <-e[-c(1, 2)]
 
+        if (is.null(cases))
+            notifyNoSwitchcases(cntxt)
+
         miss <- missingArgs(cases)
         nm <- names(cases)
 
@@ -2655,6 +2658,10 @@ notifyMultipleSwitchDefaults <- function(ndflt, cntxt)
     if (! suppressAll(cntxt))
         cntxt$warn(gettext("more than one default provided in switch() call"),
                    cntxt)
+
+notifyNoSwitchcases <- function(cntxt)
+    if (! suppressAll(cntxt))
+        cntxt$warn(gettext("'switch' with no alternatives"), cntxt)
 
 
 ##
